tests/ui/function_not_found.stderr
error: cannot find `f` in this scope
   ╭─[tests/ui/function_not_found.ina:4:5]
   │
 4 │     f();
   │     ┬
   │     ╰─ not found in this scope
   ∙
───╯
