tests/ui/function_not_found.ina
// COMPILE_FAIL

fn main() {
    f();
}
